design update, add fonts, create background code imitation

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,9 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+// "VT323", monospace;
 @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 
-// body {
-//   font-family: "VT323",
-//   monospace;
-// }
+// 'Twinkle Star', cursive;
+@import url('https://fonts.googleapis.com/css2?family=Twinkle+Star&display=swap');
+
+// font-family: 'Lato', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Twinkle+Star&display=swap');
+
+body {
+    font-family: system-ui;
+    // font-family:Verdana, Geneva, Tahoma, sans-serif
+}
