--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,16 +2,89 @@
 @tailwind components;
 @tailwind utilities;
 
-// "VT323", monospace;
-@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
-
-// 'Twinkle Star', cursive;
-@import url('https://fonts.googleapis.com/css2?family=Twinkle+Star&display=swap');
-
-// font-family: 'Lato', sans-serif;
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Twinkle+Star&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@300;400;500;600;700&family=Rubik:wght@400;500;600;700&family=Twinkle+Star&display=swap');
 
 body {
-    font-family: system-ui;
-    // font-family:Verdana, Geneva, Tahoma, sans-serif
+  font-family: 'Rubik', sans-serif;
+  
 }
+
+
+@import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
+@keyframes rotation {
+  to {
+    transform: rotate(360deg) translateX(-50%) translateY(-50%);
+  }
+}
+
+$primary-bg-color: #2953af;
+$secondary-bg-color: #2953af;
+
+.secondary-bg-color {
+  background-color: $secondary-bg-color;
+}
+
+.text-cursive {
+    font-family: 'Twinkle Star', cursive;
+}
+
+.threed-text {
+  position: relative;
+  z-index: 2;
+  text-shadow: 1px 1px rgba($secondary-bg-color, 0),
+               2px 2px rgba($secondary-bg-color, 10),
+               3px 3px rgba($secondary-bg-color, 20),
+              //  4px 4px rgba($secondary-bg-color, 30),
+            //    4px 4px rgba(127, 147, 224, 30),
+}
+
+/* textD D */
+
+span.textD {
+    display: inline-block;
+    text-decoration: none;
+  
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    animation-iteration-count: 1;
+  }
+  
+  span.textD:hover {
+    animation-name: rubberBand;
+  }
+  
+  
+  @keyframes rubberBand {
+    from {
+      transform: scale3d(1, 1, 1);
+    }
+  
+    30% {
+      transform: scale3d(1.25, 0.75, 1);
+    }
+  
+    40% {
+      transform: scale3d(0.75, 1.25, 1);
+    }
+  
+    50% {
+      transform: scale3d(1.15, 0.85, 1);
+    }
+  
+    65% {
+      transform: scale3d(.95, 1.05, 1);
+    }
+  
+    75% {
+      transform: scale3d(1.05, .95, 1);
+    }
+  
+    to {
+      transform: scale3d(1, 1, 1);
+    }
+  }
+  
+  .rubberBand {
+    -webkit-animation-name: rubberBand;
+    animation-name: rubberBand;
+  }
