--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@ body {
   }
 }
 
+// background-color: rgb(15, 23, 36);
 $primary-bg-color: #2953af;
 $secondary-bg-color: #2953af;
 
@@ -87,4 +88,10 @@ span.textD {
   .rubberBand {
     -webkit-animation-name: rubberBand;
     animation-name: rubberBand;
+  }
+
+  // Carousel dots restyle
+  .react-multi-carousel-dot-list {
+    position: relative !important;
+    margin-top: 0.50rem !important;
   }
