--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -95,3 +95,17 @@ span.textD {
     position: relative !important;
     margin-top: 0.50rem !important;
   }
+  
+
+  @media (prefers-reduced-motion: no-preference) {
+    .w-full.bg-gray-200.rounded-full.h-1.dark\:bg-gray-700 {
+      animation-name: wipe-enter;
+      animation-duration: 1s;
+      // animation-iteration-count: infinite;
+    }
+  }
+
+
+.transition-progress {
+  transition: 3s;
+}
