--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,19 +3,19 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@300;400;500;600;700&family=Rubik:wght@400;500;600;700&family=Twinkle+Star&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
 
 body {
   font-family: 'Rubik', sans-serif;
   
 }
 
+// @keyframes rotation {
+//   to {
+//     transform: rotate(360deg) translateX(-50%) translateY(-50%);
+//   }
+// }
 
-@import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
-@keyframes rotation {
-  to {
-    transform: rotate(360deg) translateX(-50%) translateY(-50%);
-  }
-}
 
 // background-color: rgb(15, 23, 36);
 $primary-bg-color: #2953af;
@@ -39,7 +39,14 @@ $secondary-bg-color: #2953af;
             //    4px 4px rgba(127, 147, 224, 30),
 }
 
-/* textD D */
+// Carousel dots restyle
+.react-multi-carousel-dot-list {
+  position: relative !important;
+  margin-top: 0.50rem !important;
+}
+
+
+/* ANIMATION */
 
 span.textD {
     display: inline-block;
@@ -90,12 +97,42 @@ span.textD {
     animation-name: rubberBand;
   }
 
-  // Carousel dots restyle
-  .react-multi-carousel-dot-list {
-    position: relative !important;
-    margin-top: 0.50rem !important;
+  .animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
   }
   
+  @-webkit-keyframes fadeInLeft {
+    0% {
+       opacity: 0;
+       -webkit-transform: translateX(-20px);
+    }
+    100% {
+       opacity: 1;
+       -webkit-transform: translateX(0);
+    }
+  }
+  
+  @keyframes fadeInLeft {
+    0% {
+       opacity: 0;
+       transform: translateX(-20px);
+    }
+    100% {
+       opacity: 1;
+       transform: translateX(0);
+    }
+  }
+  
+  .fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+  } 
+
+
+  // MEDIA QUERIES
 
   @media (prefers-reduced-motion: no-preference) {
     .w-full.bg-gray-200.rounded-full.h-1.dark\:bg-gray-700 {
